crates/voom-cli/tests/snapshots/backup_envelope__backup_envelope__backup_show_outputs_record.snap
---
source: crates/voom-cli/tests/backup_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "backup",
  "status": "ok",
  "data": {
    "backup": {
      "id": 1,
      "source_file_version_id": 1,
      "job_id": 1,
      "ticket_id": 1,
      "provider": "voom-backup-worker",
      "destination_path": "/backups/v1/movie.mkv",
      "size_bytes": 3,
      "checksum": "blake3:source",
      "status": "verified",
      "failure_class": null,
      "error_code": null,
      "message": null,
      "started_at": "1970-01-01T00:00:00.000000000Z",
      "finished_at": "1970-01-01T00:00:00.000000000Z",
      "created_at": "1970-01-01T00:00:00.000000000Z"
    }
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
